crates/amalgam-parser/tests/snapshots/practical_usage_snapshot_test__k8s_empty_objects.snap
---
source: crates/amalgam-parser/tests/practical_usage_snapshot_test.rs
expression: snapshot_content
---
SUCCESS: false

OUTPUT:
STDERR:
error: non mergeable terms
   ┌─ /Users/jtoft/src/ai/amalgam/examples/pkgs/k8s_io/v0/intorstring.ncl:4:1
   │
 4 │ String
   │ ^^^^^^ cannot merge this expression
   │
   ┌─ /Users/jtoft/src/ai/amalgam/test_snapshot_temp_23418_0.ncl:16:46
   │
16 │   int_or_string_check = k8s.v0.IntOrString & "80%",  # Test IntOrString accepts strings
   │                         ---------------------^^^^^
   │                         │                    │
   │                         │                    with this expression
   │                         originally merged here
   │
   = Merge operands have the same merge priority but they can't be combined.
   = One value is of type String while the other is of type Type
   = Values of different types can't be merged


STDOUT:
